# http-server-rs

./: Cargo.toml  LICENSE  build.rs  rustfmt.toml
src/: helpers.rs  main.rs  structs.rs
templates/: directory.html
