[package]
name = "http-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
askama = "0.12.1"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
humansize = "2.1.3"
mime_guess = "2.0.5"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["fs"] }
