[package]
name = "http-server-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1

[dependencies]
actix-files = "0.6"
actix-web = "4.9"
askama = "0.12"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
humansize = "2.1"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41", features = ["fs"] }

[[bin]]
name = "http-server"
path = "src/main.rs"
